package com.forme.app.user;

/**
 * The enum Role.
 */
public enum Role {
    /**
     * Client role.
     */
    CANDIDATE,
    /**
     * Admin role.
     */
    ADMIN,
    /**
     * Producer role.
     */
    FORMER
}
